k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-service-deployment
spec:
  replicas: 4
  strategy:    # Added rolling update strategy
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: api-service
  template:
    metadata:
      labels:
        app: api-service
    spec:
      containers:
      - name: api-service-container
        image: chiragkohli29/api-service:latest
        ports:
        - containerPort: 3000
        resources:
          requests: 
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: api-service-service
spec:
  selector:
    app: api-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer # Exposed outside cluster
